--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -116,7 +116,7 @@
                       data-te-ripple-init
                       data-te-ripple-color="light"
                       style="
-                        background: linear-gradient(to right, #ee7724, #d8363a, #dd3675, #b44593);
+                        background: linear-gradient(to right, #FF2E00, #FF6F4F, #9F6D61, #A2A2A2);
                       ">
                       Se connecter
                     </button>
@@ -128,7 +128,7 @@
             <!-- Right column container with background and description-->
             <div
               class="flex items-center rounded-b-lg lg:w-6/12 lg:rounded-r-lg lg:rounded-bl-none"
-              style="background: linear-gradient(to right, #ee7724, #d8363a, #dd3675, #b44593)">
+              style="background: linear-gradient(to right, #FF2E00, #FF6F4F, #9F6D61, #A2A2A2)">
               <div class="px-4 py-6 text-white md:mx-6 md:p-12">
                 <h4 class="mb-6 text-xl font-semibold">
                   Umbrella Delta Gestion System
