--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -3,11 +3,9 @@
 {% block title %}Register{% endblock %}
 
 {% block body %}
-    <h1>Register</h1>
-
     {{ form_errors(registrationForm) }}
 
-    {{ form_start(registrationForm) }}
+    {# {{ form_start(registrationForm) }}
         {{ form_row(registrationForm.name) }}
         {{ form_row(registrationForm.firstName) }}
         {{ form_row(registrationForm.jobTitle) }}
@@ -20,5 +18,159 @@
         {{ form_row(registrationForm.agreeTerms) }}
 
         <button type="submit" class="btn">Register</button>
-    {{ form_end(registrationForm) }}
+    {{ form_end(registrationForm) }} #}
+
+    {# Register form #}
+    <!-- TW Elements is free under AGPL, with commercial license required for specific uses. See more details: https://tw-elements.com/license/ and contact us for queries at tailwind@mdbootstrap.com --> 
+    <section class="gradient-form h-full bg-neutral-200 dark:bg-neutral-700">
+    <div class="container h-full p-10 m-auto">
+        <div
+        class="g-6 flex h-full flex-wrap items-center justify-center text-neutral-800 dark:text-neutral-200">
+        <div class="w-full">
+            <div
+            class="block rounded-lg bg-white shadow-lg dark:bg-neutral-800">
+            <div class="g-0 lg:flex lg:flex-wrap">
+                <!-- Left column container-->
+                <div class="px-4 md:px-0 lg:w-6/12">
+                <div class="md:mx-6 md:p-12">
+                    <!--Logo-->
+                    <div class="text-center">
+                    <img
+                        class="mx-auto w-48"
+                        src="{{ asset('/imgs/umbrella.png') }}"
+                        alt="logo" />
+                    <h4 class="mb-12 mt-1 pb-1 text-xl font-semibold">
+                        Inscrire un administrateur
+                    </h4>
+                    </div>
+
+                    {{ form_start(registrationForm) }}
+                    <p class="mb-4">Veuillez enter les informations</p>
+                    <!--name input-->
+                    <div class="relative mb-4" data-te-input-wrapper-init>
+                        <input
+                        type="text"
+                        class="peer block min-h-[auto] w-full rounded border-0 bg-transparent px-3 py-[0.32rem] leading-[1.6] outline-none transition-all duration-200 ease-linear focus:placeholder:opacity-100 data-[te-input-state-active]:placeholder:opacity-100 motion-reduce:transition-none dark:placeholder:text-neutral-200 [&:not([data-te-input-placeholder-active])]:placeholder:opacity-0"
+                        name="{{ field_name(registrationForm.name) }}"
+                        value="{{ field_value(registrationForm.name) }}"
+                        placeholder="Username" />
+                        <label
+                        for="{{ field_name(registrationForm.name) }}"
+                        class="pointer-events-none absolute left-3 top-0 mb-0 max-w-[90%] origin-[0_0] truncate pt-[0.37rem] leading-[1.6] text-neutral-500 transition-all duration-200 ease-out peer-focus:-translate-y-[0.9rem] peer-focus:scale-[0.8] peer-focus:text-primary-600 peer-data-[te-input-state-active]:-translate-y-[0.9rem] peer-data-[te-input-state-active]:scale-[0.8] motion-reduce:transition-none dark:text-neutral-200 dark:peer-focus:text-primary"
+                        >{{ field_label(registrationForm.name) }}
+                        </label>
+                    </div>
+
+                    <!--firstname input-->
+                    <div class="relative mb-4" data-te-input-wrapper-init>
+                        <input
+                        type="text"
+                        class="peer block min-h-[auto] w-full rounded border-0 bg-transparent px-3 py-[0.32rem] leading-[1.6] outline-none transition-all duration-200 ease-linear focus:placeholder:opacity-100 data-[te-input-state-active]:placeholder:opacity-100 motion-reduce:transition-none dark:placeholder:text-neutral-200 [&:not([data-te-input-placeholder-active])]:placeholder:opacity-0"
+                        name="{{ field_name(registrationForm.firstName) }}"
+                        value="{{ field_value(registrationForm.firstName) }}"
+                        placeholder="Username" />
+                        <label
+                        for="{{ field_name(registrationForm.firstName) }}"
+                        class="pointer-events-none absolute left-3 top-0 mb-0 max-w-[90%] origin-[0_0] truncate pt-[0.37rem] leading-[1.6] text-neutral-500 transition-all duration-200 ease-out peer-focus:-translate-y-[0.9rem] peer-focus:scale-[0.8] peer-focus:text-primary-600 peer-data-[te-input-state-active]:-translate-y-[0.9rem] peer-data-[te-input-state-active]:scale-[0.8] motion-reduce:transition-none dark:text-neutral-200 dark:peer-focus:text-primary"
+                        >{{ field_label(registrationForm.firstName) }}
+                        </label>
+                    </div>
+
+                    {# title input #}
+                    <div class="relative mb-6">
+                    {{ form_widget(registrationForm.jobTitle, {'attr': {'data-te-select-init': 'data-te-select-init'}}) }}
+                    <label data-te-select-label-ref>{{ field_label(registrationForm.jobTitle) }}</label>
+                    </div>
+
+                    {# service input #}
+                    <div class="relative mb-6">
+                    {{ form_widget(registrationForm.service, {'attr': {'data-te-select-init': 'data-te-select-init'}}) }}
+                    <label data-te-select-label-ref>{{ field_label(registrationForm.service) }}</label>
+                    </div>
+
+                    <!--phonenumber input-->
+                    <div class="relative mb-4" data-te-input-wrapper-init>
+                        <input
+                        type="text"
+                        class="peer block min-h-[auto] w-full rounded border-0 bg-transparent px-3 py-[0.32rem] leading-[1.6] outline-none transition-all duration-200 ease-linear focus:placeholder:opacity-100 data-[te-input-state-active]:placeholder:opacity-100 motion-reduce:transition-none dark:placeholder:text-neutral-200 [&:not([data-te-input-placeholder-active])]:placeholder:opacity-0"
+                        name="{{ field_name(registrationForm.phoneNumber) }}"
+                        value="{{ field_value(registrationForm.phoneNumber) }}"
+                        placeholder="Username" />
+                        <label
+                        for="{{ field_name(registrationForm.phoneNumber) }}"
+                        class="pointer-events-none absolute left-3 top-0 mb-0 max-w-[90%] origin-[0_0] truncate pt-[0.37rem] leading-[1.6] text-neutral-500 transition-all duration-200 ease-out peer-focus:-translate-y-[0.9rem] peer-focus:scale-[0.8] peer-focus:text-primary-600 peer-data-[te-input-state-active]:-translate-y-[0.9rem] peer-data-[te-input-state-active]:scale-[0.8] motion-reduce:transition-none dark:text-neutral-200 dark:peer-focus:text-primary"
+                        >{{ field_label(registrationForm.phoneNumber) }}
+                        </label>
+                    </div>
+
+                    <!--email input-->
+                    <div class="relative mb-4" data-te-input-wrapper-init>
+                        <input
+                        type="text"
+                        class="peer block min-h-[auto] w-full rounded border-0 bg-transparent px-3 py-[0.32rem] leading-[1.6] outline-none transition-all duration-200 ease-linear focus:placeholder:opacity-100 data-[te-input-state-active]:placeholder:opacity-100 motion-reduce:transition-none dark:placeholder:text-neutral-200 [&:not([data-te-input-placeholder-active])]:placeholder:opacity-0"
+                        name="{{ field_name(registrationForm.email) }}"
+                        value="{{ field_value(registrationForm.email) }}"
+                        placeholder="Username" />
+                        <label
+                        for="{{ field_name(registrationForm.email) }}"
+                        class="pointer-events-none absolute left-3 top-0 mb-0 max-w-[90%] origin-[0_0] truncate pt-[0.37rem] leading-[1.6] text-neutral-500 transition-all duration-200 ease-out peer-focus:-translate-y-[0.9rem] peer-focus:scale-[0.8] peer-focus:text-primary-600 peer-data-[te-input-state-active]:-translate-y-[0.9rem] peer-data-[te-input-state-active]:scale-[0.8] motion-reduce:transition-none dark:text-neutral-200 dark:peer-focus:text-primary"
+                        >{{ field_label(registrationForm.email) }}
+                        </label>
+                    </div>
+
+                    <!--Password input-->
+                    <div class="relative mb-4" data-te-input-wrapper-init>
+                        <input
+                        type="password"
+                        class="peer block min-h-[auto] w-full rounded border-0 bg-transparent px-3 py-[0.32rem] leading-[1.6] outline-none transition-all duration-200 ease-linear focus:placeholder:opacity-100 data-[te-input-state-active]:placeholder:opacity-100 motion-reduce:transition-none dark:placeholder:text-neutral-200 [&:not([data-te-input-placeholder-active])]:placeholder:opacity-0"
+                        name="{{ field_name(registrationForm.plainPassword) }}"
+                        value="{{ field_value(registrationForm.plainPassword) }}"
+                        placeholder="Password" />
+                        <label
+                        for="{{ field_name(registrationForm.plainPassword) }}"
+                        class="pointer-events-none absolute left-3 top-0 mb-0 max-w-[90%] origin-[0_0] truncate pt-[0.37rem] leading-[1.6] text-neutral-500 transition-all duration-200 ease-out peer-focus:-translate-y-[0.9rem] peer-focus:scale-[0.8] peer-focus:text-primary-600 peer-data-[te-input-state-active]:-translate-y-[0.9rem] peer-data-[te-input-state-active]:scale-[0.8] motion-reduce:transition-none dark:text-neutral-200 dark:peer-focus:text-primary"
+                        >{{ field_label(registrationForm.plainPassword) }}
+                        </label>
+                    </div>
+
+                    {{ form_row(registrationForm.agreeTerms, {'attr': {'class':"relative float-left -ml-[1.5rem] mr-[6px] mt-[0.15rem] h-[1.125rem] w-[1.125rem] appearance-none rounded-[0.25rem] border-[0.125rem] border-solid border-neutral-300 outline-none before:pointer-events-none before:absolute before:h-[0.875rem] before:w-[0.875rem] before:scale-0 before:rounded-full before:bg-transparent before:opacity-0 before:shadow-[0px_0px_0px_13px_transparent] before:content-[''] checked:border-primary checked:bg-primary checked:before:opacity-[0.16] checked:after:absolute checked:after:-mt-px checked:after:ml-[0.25rem] checked:after:block checked:after:h-[0.8125rem] checked:after:w-[0.375rem] checked:after:rotate-45 checked:after:border-[0.125rem] checked:after:border-l-0 checked:after:border-t-0 checked:after:border-solid checked:after:border-white checked:after:bg-transparent checked:after:content-[''] hover:cursor-pointer hover:before:opacity-[0.04] hover:before:shadow-[0px_0px_0px_13px_rgba(0,0,0,0.6)] focus:shadow-none focus:transition-[border-color_0.2s] focus:before:scale-100 focus:before:opacity-[0.12] focus:before:shadow-[0px_0px_0px_13px_rgba(0,0,0,0.6)] focus:before:transition-[box-shadow_0.2s,transform_0.2s] focus:after:absolute focus:after:z-[1] focus:after:block focus:after:h-[0.875rem] focus:after:w-[0.875rem] focus:after:rounded-[0.125rem] focus:after:content-[''] checked:focus:before:scale-100 checked:focus:before:shadow-[0px_0px_0px_13px_#3b71ca] checked:focus:before:transition-[box-shadow_0.2s,transform_0.2s] checked:focus:after:-mt-px checked:focus:after:ml-[0.25rem] checked:focus:after:h-[0.8125rem] checked:focus:after:w-[0.375rem] checked:focus:after:rotate-45 checked:focus:after:rounded-none checked:focus:after:border-[0.125rem] checked:focus:after:border-l-0 checked:focus:after:border-t-0 checked:focus:after:border-solid checked:focus:after:border-white checked:focus:after:bg-transparent dark:border-neutral-600 dark:checked:border-primary dark:checked:bg-primary dark:focus:before:shadow-[0px_0px_0px_13px_rgba(255,255,255,0.4)] dark:checked:focus:before:shadow-[0px_0px_0px_13px_#3b71ca]"}}) }}
+
+
+                    <!--Submit button-->
+                    <div class="mb-12 pb-1 pt-1 text-center">
+                        <button
+                        class="mb-3 inline-block w-full rounded px-6 pb-2 pt-2.5 text-xs font-medium uppercase leading-normal text-white shadow-[0_4px_9px_-4px_rgba(0,0,0,0.2)] transition duration-150 ease-in-out hover:shadow-[0_8px_9px_-4px_rgba(0,0,0,0.1),0_4px_18px_0_rgba(0,0,0,0.2)] focus:shadow-[0_8px_9px_-4px_rgba(0,0,0,0.1),0_4px_18px_0_rgba(0,0,0,0.2)] focus:outline-none focus:ring-0 active:shadow-[0_8px_9px_-4px_rgba(0,0,0,0.1),0_4px_18px_0_rgba(0,0,0,0.2)]"
+                        type="submit"
+                        data-te-ripple-init
+                        data-te-ripple-color="light"
+                        style="
+                            background: linear-gradient(to right, #FF2E00, #FF6F4F, #9F6D61, #A2A2A2);
+                        ">
+                        Inscrire
+                        </button>
+                    </div>
+                    {{ form_end(registrationForm) }}
+                </div>
+                </div>
+
+                <!-- Right column container with background and description-->
+                <div
+                class="flex items-center rounded-b-lg lg:w-6/12 lg:rounded-r-lg lg:rounded-bl-none"
+                style="background: linear-gradient(to right, #FF2E00, #FF6F4F, #9F6D61, #A2A2A2)">
+                <div class="px-4 py-6 text-white md:mx-6 md:p-12">
+                    <h4 class="mb-6 text-xl font-semibold">
+                    Section inscription des membres du personnel avec statut administrateur
+                    </h4>
+                    <p class="text-sm">
+                    Cette section est reservée aux membres du personnel ayant le statut ADMINISTRATEUR.
+                    </p>
+                </div>
+                </div>
+            </div>
+            </div>
+        </div>
+        </div>
+    </div>
+    </section>
+    {# Register form #}
 {% endblock %}
