--- a/templates/transmission/edit.html.twig
+++ b/templates/transmission/edit.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1 class="text-2xl text-center mt-2 mb-5">Modifier {{ transmission.title }}</h1>
 
-    {{ include('transmission/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('transmission/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
 
     {# Tailwind options #}
     <table class="mt-10 m-auto">
