--- a/templates/bundles/TwigBundle/Exception/error.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error.html.twig
@@ -15,12 +15,12 @@
     {% endif %}
     {% if status_code == "403" %}
     <div>
-        <h1 class="text-5xl text-center mt-5 mb-5">La syntaxe de la requête est erronée.</h1>
+        <h1 class="text-5xl text-center mt-5 mb-5">Vous n'êtes pas authorisé à accéder à cette fonction</h1>
     </div>
     {% endif %}
     {% if status_code == "404" %}
     <div>
-        <h1 class="text-5xl text-center mt-5 mb-5">Vous n'êtes pas authorisé à accéder à cette fonction</h1>
+        <h1 class="text-5xl text-center mt-5 mb-5">Non autorisé</h1>
     </div>
     {% endif %}
     {% if status_code == "500" %}
